--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
 h1{
     font-size: 50px;
 }
-h2{
+#heading{
     width: 100%;
     text-align: center;
     font-size: 40px;
@@ -12,9 +12,9 @@ h2{
 .orange-color{
     color: orange;
 }
-.top-page{
+.flexible-container{
     display: flex;
-    margin-bottom: 100px;
+    margin-bottom: 150px;
 }
 .first-page{
     width: 50%;
@@ -31,23 +31,43 @@ h2{
     font-weight: 700;
     border-radius: 5px;
 }
-.second-page{
+.last-div{
+    background-image: url(images/shapes/shape-1.png);
+    background-repeat: no-repeat;
+    background-position:right ;
+    background-size: 300px;
+}
+.last-pic{
+    background-image: url(images/shapes/shape-1.png);
+    background-repeat: no-repeat;
+    background-position:left;
+    background-size: 300px;
+}
+.second{
     box-shadow: 10px 10px 40px gray;
-    width: 350%;
-    margin-left: 2%;
-    margin-right: 2%;
-    padding-left: 30px;
-    border-radius: 10px;
-}
-.div-picture{
-    width: 10%;
-}
-.mission{
-    box-shadow: 5px 5px 10px gray;
-    width: 30%;
+    width: 50%;
     margin-left: 5%;
     margin-right: 5%;
-    padding-left: 20px;
+    padding-left: 50px;
     border-radius: 10px;
+}
+.Mission{
+    background-image: url(images/illustrators/illustrator-1.png);
+    background-repeat: no-repeat;
+    display: flex;
+    background-size: cover;
+    padding-top: 20px;
+}
 
+
+footer p{
+  text-align: center; 
+  color: white; 
+ } h3{
+    text-align: center;
+    color: tomato;
+}
+.last-section{
+    background-color: black;
+    width: 110;
 }
